--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,10 @@
     "dependencies": {
         "jquery": "1.11.x",
         "angular": "1.5.x",
-        "bootstrap": "3.x.x"
+        "bootstrap": "3.x.x",
+        "angular-mocks": "1.5.x",
+        "angular-route": "1.5.x",
+        "angular-resource": "1.5.x",
+        "angular-animate": "1.5.x"
     }
 }
